<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="7dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:fillViewport="true"
            android:overScrollMode="never"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/app_settings_title"
                    android:textColor="@color/launcher_text_color"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/hdSettingsActionList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/hdSettingsApp"
                        style="@style/LauncherManageItem">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:contentDescription="@null"
                            android:scaleType="centerInside"
                            android:src="@drawable/launcher_home_sheet_app_settings" />

                        <TextView
                            style="@style/LauncherManageTitle"
                            android:text="@string/app_settings_title" />

                        <ImageView
                            style="@style/LauncherManageArrowIcon"
                            android:contentDescription="@null"
                            android:src="@drawable/launcher_manage_arrow" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/hdSettingsTheme"
                        style="@style/LauncherManageItem">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:contentDescription="@null"
                            android:scaleType="centerInside"
                            android:src="@drawable/launcher_home_sheet_theme" />

                        <TextView
                            style="@style/LauncherManageTitle"
                            android:text="@string/launcher_settings_action_theme" />

                        <ImageView
                            style="@style/LauncherManageArrowIcon"
                            android:contentDescription="@null"
                            android:src="@drawable/launcher_manage_arrow" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/hdSettingsTone"
                        style="@style/LauncherManageItem">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:contentDescription="@null"
                            android:scaleType="centerInside"
                            android:src="@drawable/launcher_home_sheet_tone" />

                        <TextView
                            style="@style/LauncherManageTitle"
                            android:text="@string/launcher_settings_action_tone" />

                        <ImageView
                            style="@style/LauncherManageArrowIcon"
                            android:contentDescription="@null"
                            android:src="@drawable/launcher_manage_arrow" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/hdSettingsUpdate"
                        style="@style/LauncherManageItem">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:contentDescription="@null"
                            android:scaleType="centerInside"
                            android:src="@drawable/launcher_home_sheet_update" />

                        <TextView
                            style="@style/LauncherManageTitle"
                            android:text="@string/launcher_settings_action_update" />

                        <ImageView
                            style="@style/LauncherManageArrowIcon"
                            android:contentDescription="@null"
                            android:src="@drawable/launcher_manage_arrow" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/hdSettingsFeedback"
                        style="@style/LauncherManageItem">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:contentDescription="@null"
                            android:scaleType="centerInside"
                            android:src="@drawable/launcher_home_sheet_feedback" />

                        <TextView
                            style="@style/LauncherManageTitle"
                            android:text="@string/launcher_settings_action_feedback" />

                        <ImageView
                            style="@style/LauncherManageArrowIcon"
                            android:contentDescription="@null"
                            android:src="@drawable/launcher_manage_arrow" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/hdSettingsDisclaimer"
                        style="@style/LauncherManageItem">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:contentDescription="@null"
                            android:scaleType="centerInside"
                            android:src="@drawable/launcher_home_sheet_disclaimer" />

                        <TextView
                            style="@style/LauncherManageTitle"
                            android:text="@string/launcher_settings_action_disclaimer" />

                        <ImageView
                            style="@style/LauncherManageArrowIcon"
                            android:contentDescription="@null"
                            android:src="@drawable/launcher_manage_arrow" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <FrameLayout
            android:id="@+id/hdSettingsDetailContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="7dp"
            android:layout_weight="2"
            android:background="@drawable/launcher_chat_option_bg"
            android:clipChildren="true"
            android:clipToOutline="true" />
    </LinearLayout>
</FrameLayout>
